task2_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sTask2
metadata:
  name: task2
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
    - kube-system
  parameters: {}
